--- a/README
+++ b/README
@@ -8,9 +8,12 @@ A soft & sweet to-do list app built with **React** and styled using **Tailwind C
 
 - ➕ Add tasks with a cute plus button
 - 🗑️ Delete tasks with a trash icon
-- ✨ Styled with TailwindCSS
-- 💖 Soft pink & fantasy notebook feel
-- 📱 Responsive and mobile-friendly
+- ✏️ Edit tasks with a single click
+- ✅ Mark tasks as completed (done tasks move to the bottom)
+- 🔃 Filter by: All / Active / Done
+- 💾 Auto-save tasks with **LocalStorage**
+- 🎀 Minimal design with dashed notebook border
+- 📱 Fully responsive and mobile-friendly
 
 ---
 
@@ -31,8 +34,9 @@ App will start at `http://localhost:3000`
 
 ## 🖼️ Preview
 
-_You can add screenshots of the app here!_
-
+<p align="center">
+  <img src="https://github.com/Saeede-Azimipoor/My-Lovely-To-Do/blob/master/Screenshot.png" alt="My Lovely To-Do screenshot" width="500" />
+</p>
 ---
 
 ## 📂 Tech Stack
