--- a/README
+++ b/README
@@ -35,7 +35,7 @@ App will start at `http://localhost:3000`
 ## 🖼️ Preview
 
 <p align="center">
-  <img src="https://github.com/Saeede-Azimipoor/My-Lovely-To-Do/blob/master/Screenshot.png" alt="My Lovely To-Do screenshot" width="500" />
+  <img src="https://raw.githubusercontent.com/Saeede-Azimipoor/My-Lovely-To-Do/master/Screenshot.png" alt="My Lovely To-Do screenshot" width="500" />
 </p>
 ---
 
