--- a/README
+++ b/README
@@ -34,9 +34,10 @@ App will start at `http://localhost:3000`
 
 ## 🖼️ Preview
 
-<p align="center">
-  <img src="https://raw.githubusercontent.com/Saeede-Azimipoor/My-Lovely-To-Do/master/Screenshot.png" alt="My Lovely To-Do screenshot" width="500" />
-</p>
+## 🖼️ Preview
+
+![My Lovely To-Do screenshot](https://raw.githubusercontent.com/Saeede-Azimipoor/My-Lovely-To-Do/master/Screenshot.png)
+
 ---
 
 ## 📂 Tech Stack
