--- a/README
+++ b/README
@@ -36,7 +36,7 @@ App will start at `http://localhost:3000`
 
 ## 🖼️ Preview
 
-![My Lovely To-Do screenshot](https://github.com/Saeede-Azimipoor/My-Lovely-To-Do/blob/master/Screenshot)
+![My Lovely To-Do screenshot](https://github.com/Saeede-Azimipoor/My-Lovely-To-Do/blob/master/Screenshot.png)
 ![o](https://github.com/AmirBayat0/Flutter_examples/assets/91388754/355bd5e3-e512-497f-9c0a-000998c1bbcf)
 ---
 
