--- a/README
+++ b/README
@@ -31,12 +31,9 @@ npm start
 App will start at `http://localhost:3000`
 
 ---
-
 ## 🖼️ Preview
 
-## 🖼️ Preview
-
-![My Lovely To-Do screenshot](https://raw.githubusercontent.com/Saeede-Azimipoor/My-Lovely-To-Do/master/Screenshot.png)
+![My Lovely To-Do screenshot](https://github.com/Saeede-Azimipoor/My-Lovely-To-Do/blob/master/Screenshot.png?raw=true)
 
 ---
 
